创建了支付页面

--- a/pay.html
+++ b/pay.html
@@ -7,13 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <div class="dd">
-       <ul>
-           <li>这是在pay界面修改的</li>
-           <li>这是在pay界面修改的</li>
-           <li>这是在pay界面修改的</li>
-           <li>这是在pay界面修改的</li>
-       </ul>
-   </div>
+    <div>支付界面</div>
 </body>
 </html>
