完成了支付功能开发

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
            <li>这是在pay界面修改的</li>
            <li>这是在pay界面修改的</li>
        </ul>
+       <a href="./pay.html"></a>
    </div>
 </body>
 </html>
